--- a/app/src/main/res/layout/base_loading_layout.xml
+++ b/app/src/main/res/layout/base_loading_layout.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#3fff8482"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ProgressBar
+
         android:layout_width="wrap_content"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_gravity="center"
