--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,44 @@
         android:id="@+id/tv_hello"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="Hello World!"
         android:layout_margin="50dp"
-        android:gravity="center"
         android:background="@color/colorPrimary"
+        android:gravity="center"
         android:onClick="changeStateView"
+        android:text="Kotlin 使用方式"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_show_state_msg"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:text="@string/show_state_only_str"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_show_state"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="ONLY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_show_state_msg" />
+
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/sw"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:textOff="STACK"
+        android:textOn="ONLY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/tv_show_state"
+        app:layout_constraintTop_toTopOf="@id/tv_show_state" />
 
 </android.support.constraint.ConstraintLayout>
