--- a/app/src/main/res/layout/demo_fragment_layout.xml
+++ b/app/src/main/res/layout/demo_fragment_layout.xml
@@ -10,6 +10,7 @@
         android:gravity="center"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/tv_index"
             android:layout_width="match_parent"
             android:gravity="center"
             android:text="这是fragment  extends StateFragment"
