--- a/stateview/src/main/res/values/ids.xml
+++ b/stateview/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item type="id" name="state_tag"/>
     <item type="id" name="state_view"/>
+    <item type="id" name="state_manager_view"/>
 </resources>
